tests/snapshots/tui_snapshot__tui_streaming_text.snap
---
source: tests/tui_snapshot.rs
assertion_line: 203
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:
  Streaming response...

  ⣾  Processing...

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
