tests/snapshots/tui_snapshot__tui_thinking_hidden_status.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:

    Text.



  Thinking hidden

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  /help  |  Ctrl+C: quit
