tests/snapshots/tui_snapshot__tui_tool_auto_collapsed.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)


  ▶ Tool read output: (60 lines, collapsed)
    line 1
    Tool read output:
    line 2
    Tool read output:
    line 3
    ... 54 more lines

  Assistant:

    Done.


  [100%] ↑/↓ PgUp/PgDn to scroll

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  /help  |  Ctrl+C: quit
