tests/snapshots/tui_snapshot__tui_tool_output_message.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)


  Tool read output:
file contents here

  [single-line] Enter to send (Shift+Enter for newline)
    > Type your message... (Enter to send, Shift+Enter for newline, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  /help  |  Ctrl+C: quit
