tests/snapshots/tui_snapshot__tui_tool_reexpanded.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)


  You: Read the file.

  Tool read output:
short output here

  Assistant:

    Done.



  Tool output expanded

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  /help  |  Ctrl+C: quit
